@@ -308,6 +308,42 @@ class MonthViewPresenterTests(unittest.TestCase):
         # presenters.month.EventOnMonthView
         painted_event  = feb_15.event_slots[0]
         self.assertEqual(painted_event.title, "Meeting")
+        self.assertFalse(painted_event.bubbled)
+
+    def test_paints_event_of_three_full_days(self):
+        focus_at = datetime.datetime(2010, 2, 15)
+        now_at   = datetime.datetime.now()
+        
+        presenter = self._makeOne(focus_at, now_at, dummy_url_for)
+        event = DummyCatalogEvent(
+                    title="Vacation",
+                    startDate=datetime.datetime(2010, 2, 15,  12,  0,  0),
+                    endDate  =datetime.datetime(2010, 2, 18,  12,  0,  0)
+                )        
+        presenter.paint_events([event])
+
+        # find days of Feb 15 and 16 
+        week_of_feb_14 = presenter.weeks[2] 
+        feb_15         = week_of_feb_14[1] # dummy event on feb 15  
+        feb_16         = week_of_feb_14[2] #   continues through feb 16    
+        feb_17         = week_of_feb_14[3] #   and through feb 17    
+
+        # presenters.month.EventOnMonthView
+        painted_event = feb_15.event_slots[0]
+        self.assertEqual(painted_event.title, "Vacation")
+        self.assertTrue(painted_event.bubbled)
+        self.assertEqual(painted_event.rounding_class, "left")
+
+        painted_event = feb_16.event_slots[0]
+        self.assertEqual(painted_event.title, "Vacation")
+        self.assertTrue(painted_event.bubbled)
+        self.assertEqual(painted_event.rounding_class, "center")
+
+        painted_event = feb_17.event_slots[0]
+        self.assertEqual(painted_event.title, "Vacation")
+        self.assertTrue(painted_event.bubbled)
+        self.assertEqual(painted_event.rounding_class, "right")
+
 
     # helpers
 
